packages/svelte/tests/validator/samples/declaration-tag-already-declared/input.svelte
<script>
	let foo = 'bar';
</script>

{let foo = 'baz'}
