packages/svelte/tests/compiler-errors/samples/props-bindable-rest/main.svelte
<script>
	let { foo, ...ok } = $props();
	let { bar, ...not_ok } = $props.bindable();
</script>
